--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
 
     <script>
       $(document).ready(function(){
-        $("body").css("background-image","url(https://ken357525161.github.io/mountain.png)");
+        $("body").css("background-image","url(https://ken357525161.github.io/mountain2.png)");
         $(window).resize(function(){
           var top_in_digits = ($(window).height() - $("div.content").outerHeight())/4;
           top_in_digits = (top_in_digits > 0)?top_in_digits:0;
