--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
 
 <!--3.1--><div class="col-sm-4 col-lg-4 website">
 <a href="https://shop73187166.taobao.com" id="17" class="website hotkey69">
-<span>芥末小慧店铺</span>
+<span>芥末小慧</span>
 </a></div>
 
 <!--3.2--><div class="col-sm-4 col-lg-4 website">
-<a href="https://www.deepl.com/translator" id="18" class="website hotkey">
-<span>deepl-翻译</span>
+<a href="==" id="18" class="website hotkey">
+<span>==译</span>
 </a>
 </div>
 <!--3.3--><div class="col-sm-4 col-lg-4 website">
