--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
 <!--【上层 第2块】-->
 <!--标题--><a class="block-name" href="#">==</a></div><div class="col-sm-4 col-lg-4 placeholder"></div><div class="col-sm-4 col-lg-4 placeholder"></div>
 </div></div>
-<!--1.1--><div class="col-sm-4 col-lg-4 website"><a href="http://a12345678.viptoyou.com" id="21" class="website hotkey90"><span>OneDrive</span></a></div>
-<!--1.2--><div class="col-sm-4 col-lg-4 website"><a href="http://aliyun.applefly.top/" id="22" class="website hotkey87"><span>阿里云盘</span></a></div>
-<!--1.3--><div class="col-sm-4 col-lg-4 website"><a href="==" id="23" class="website hotkey68"><span>==</span></a></div>
+<!--1.1--><div class="col-sm-4 col-lg-4 website"><a href="http://a12345678.viptoyou.com" id="21" class="website hotkey90"><span>自用-OneDrive</span></a></div>
+<!--1.2--><div class="col-sm-4 col-lg-4 website"><a href="http://a87654321.viptoyou.com" id="22" class="website hotkey87"><span>自用-阿里云盘</span></a></div>
+<!--1.3--><div class="col-sm-4 col-lg-4 website"><a href="https://www.lanzou.com/u" id="23" class="website hotkey68"><span>蓝奏云</span></a></div>
 <!--2.1--><div class="col-sm-4 col-lg-4 website"><a href="https://www.ipip.net/ip/" id="24" class="website hotkey88"><span>ipip.net</span></a></div>
 <!--2.2--><div class="col-sm-4 col-lg-4 website"><a href="https://www.ip138.com/" id="25" class="website hotkey89"><span>ip138</span></a></div>
 <!--2.3--><div class="col-sm-4 col-lg-4 website"><a href="https://ip.cn/" id="26" class="website hotkey74"><span>ip.cn</span></a></div>
@@ -468,7 +468,7 @@
 
 <!--1.1--><div class="col-sm-4 col-lg-4 website"><a href="https://www.hostloc.com/forum.php" id="31" class="website hotkey84"><span>全球主机论坛</span></a></div>
 
-<!--2.2--><div class="col-sm-4 col-lg-4 website"><a href="https://www.lanzou.com/u" id="32" class="website hotkey83"><span>蓝奏云</span></a>
+<!--2.2--><div class="col-sm-4 col-lg-4 website"><a href="==" id="32" class="website hotkey83"><span>==</span></a>
 </div>
 <!--3.3--><div class="col-sm-4 col-lg-4 website"><a href="==" id="33" class="website hotkey82"><span>==</span>
 </a></div>
