--- a/index.html
+++ b/index.html
@@ -422,10 +422,10 @@
 </a></div>
 <!--3.1--><div class="col-sm-4 col-lg-4 website">
 <a href="https://www.emshost.com/console.aspx?c=myservice" id="47" class="website hotkey57"><span>易速互联</span></a></div>
-<!--3.2--><div class="col-sm-4 col-lg-4 website"><a href="https://www.zlhl.cn/user/serverManage/" id="48" class="website hotkey56"><span>中联互联</span>
+<!--3.2--><div class="col-sm-4 col-lg-4 website"><a href="http://www.yongliyun.cn/" id="48" class="website hotkey56"><span>永利云</span>
 </a>
 </div>
-<!--3.3--><div class="col-sm-4 col-lg-4 website"><a href="==" id="49" class="website hotkey55"><span>==</span>
+<!--3.3--><div class="col-sm-4 col-lg-4 website"><a href="http://www.138yun.cn/index.php/admin/" id="49" class="website hotkey55"><span>代理后台</span>
 </a></div>
 
 
