--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 <span>昆明晏宇</span></a></div>
 <!--1.2--><div class="col-sm-4 col-lg-4 website">
 <a href="https://www.ftpsw.com/user" id="72" class="website hotkey"><span>四五互联</span></a></div>
-<!--1.3--><div class="col-sm-4 col-lg-4 website"><a href="https://www.gzyzyun.com/user" id="73" class="website hotkey"><span>云创</span></a>
+<!--1.3--><div class="col-sm-4 col-lg-4 website"><a href="==" id="73" class="website hotkey"><span>==</span></a>
 </div>
 <!--2.1--><div class="col-sm-4 col-lg-4 website">
 <a href="http://duoduoyun.viptoyou.cn" id="74" class="website hotkey">
