--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			</div>
 		</div>
 		<footer class="footer">
-			<div>© 2023 请欣赏风景图 使用前必读 意见反馈</div>
+			<div>请欣赏风景图 使用前必读 意见反馈</div>
 			<div>
 				<a href="#">关于我们</a>
 				<a href="#">联系我们</a>
